`Refactor services.html: update padding, add flex-wrap to divs`

--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
 </a>
     </nav>
   </header>
-    <div class="pl-56 pr-56 pt-10">
+    <div class="lg:pl-56 lg:pr-56 pt-10">
         <div class=" text-center space-y-2">
         <span class="font-quicksand text-xs text-gray-600">Home /</span>
         <span class="font-quicksand text-4xl block">Services</span>
