--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 </svg>
 </button>
     <ul class="flex flex-col p-6 space-y-4">
-      <li><a href="index.html" class="hover:text-gray-300 text-xl border-b-2">Home</a></li>
+      <li><a href="index.html" class="hover:text-gray-300 text-xl border-b-2">Homes</a></li>
       <li><a href="about.html" class="hover:text-gray-300 text-xl border-b-2">About</a></li>
       <li><a href="services.html" class="hover:text-gray-300 text-xl border-b-2">Services</a></li>
       <li><a href="contact us.html" class="hover:text-gray-300 text-xl border-b-2">Contact</a></li>
